TipTapTools wrap issue

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -16,8 +16,8 @@ body {
     height: 100%;
 
     // For screenshots
-    height: calc(100% - 20px);
-    margin: 10px;
+    // height: calc(100% - 20px);
+    // margin: 10px;
 }
 
 * {
